Unreal More Training

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -52,6 +52,7 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/Kodeco_Course")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/Kodeco_Course")
+UnrealEdEngine=/Script/GitStatusBranch.MyUnrealEdEngine
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
